--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,9 @@
   --sixth: #c1ed1126;
   --seventh: #ef9800;
   --eighth: #000000b8;
+  --nineth: #161422;
+  --tenth: #2a273b;
+  --eleventh: #1b1928;
 }
 
 @theme inline {
