--- a/app/animations.css
+++ b/app/animations.css
@@ -12,24 +12,24 @@
 
 @keyframes smoothLeft {
     0% {
-        transform: translateY(100px);
+        transform: translateX(100px);
         opacity: 0;
     }
 
     100% {
-        transform: translateY(0px);
+        transform: translateX(0px);
         opacity: 1;
     }
 }
 
 @keyframes smoothRight {
     0% {
-        transform: translateY(100px);
+        transform: translateX(-100px);
         opacity: 0;
     }
 
     100% {
-        transform: translateY(0px);
+        transform: translateX(0px);
         opacity: 1;
     }
 }
